@@ -1,5 +1,8 @@
 Dev Version:
 
+- Perlito Closure extends java.util.function.UnaryOperator, BinaryOperator:
+    sub ($) { ... }         # UnaryOperator<PerlObject>
+    sub ($, $) { ... }      # BinaryOperator<PerlObject>
 -- fix: `__LINE__` returns the full path
 -- fix: `a =>=> b =>` is not a syntax error
 -- fix: `(,)` is a syntax error
